[Version key: $major.$minor$type, $type: a(lpha), b(eta), r(elease)c(andidate)]

* 2006-10-12  0.912b released
    - migrated to monotone
    - default to compact mode for thread display
    - used cervantes' syndie_nets.png image (thanks!)

* 2006-10-08  0.910a released
    - implemented the new "threads" command, allowing intra as well as
      interchannel searching based on tags, with results ordered by most
      recently updated threads.
    - implemented the new "alias" command (and associated database table),
      allowing single and multicommand aliases using ";" as a command
      delimiter.  e.g.
      "alias sync menu syndicate; getindex; fetch; schedule --put archive; post"

* 2006-10-07  0.909a released
    - added a new "history" and associated csh-style history editing
      commands (!!, !-$num, !$num, ^a, ^a^b).
    - simplify channel authorization management with new "listnyms",
      "addnym", and "removenym" commands.

* 2006-10-06  0.908a released
    - rework the database update process so we now run
      src/syndie/db/ddl_update$n.txt whenever we are upgrading from database
      schema version $n.  This is backwards compatible
    - revamp the message/metadata import process and db schema to allow 
      importing messages that are authorized/authenticated but cannot be read,
      due to a missing key or passphrase.  in turn, revamp the read/view menu
      to display the undecrypted messages appropriately, prompting for the
      valid decryption material, providable with the new "decrypt" command.
    - encrypt private channel replies with the right key and scope

* 2006-10-05  0.907a released
    - further thread rendering fixes, and support for a new "threadprev"
      command.
    - added some status and debug messages describing the progress of http
      fetches, and added a timeout for reading http response headers (which
      should come back quickly, even if there's lots of data to transfer)