@@ -9,7 +9,8 @@ Key:
  X dist files ont http://syndie.i2p.net/dist/
 - monotone migration
  - public archive online
- - syndie-commit@i2p.net mailing list
+ X syndie-commit@i2p.net mailing list
+ - on mtn rev push @ mtn.i2p.net, post to syndie-commit
  X syndie-announce@i2p.net mailing list
  X use monotone internally
 
@@ -39,3 +40,4 @@ Key:
    value to someone authorized to post under the msgURI's scope, so low-cpu users can
    still post to a forum if they're given a list of available messageId/hashcash values
    (assuming they're authorized to post in the uri's scope, of course)
+- implement monotone lua hook for verifying commits only from $devs
