@@ -1,1 +1,1 @@
-syndie.version=0.912b
+syndie.version=0.913b
