@@ -40,7 +40,15 @@ releases.</p>
 <a href="http://dev.i2p.net/pipermail/i2p/">development list</a>,
 <a href="http://forum.i2p.net/forum.php?f=123">forum</a>,
 <a href="http://www.i2p.net/meetings">weekly meetings</a>, and
-<a href="irc://irc.freenode.net/#i2p">IRC channel</a>.</p>
+<a href="irc://irc.freenode.net/#i2p">IRC channel</a>.  Announcements
+are made on the
+<a href="http://dev.i2p.net/pipermail/syndie-announce/">syndie-announce</a>
+mailing list, with source code changes posted to the
+<a href="http://dev.i2p.net/pipermail/syndie-commit/">syndie-commit</a>
+mailing list (though the primary resource for source code changes is of
+course the <a href="http://venge.net/monotone/">monotone</a> repository
+at <code>mtn.i2p.net</code>, as described on the
+<a href="download.html">download</a> page).</p>
 
 <p>Installation packages for <a href="download.html">download</a> are
 built with various ant targets:<ul>
@@ -74,7 +82,7 @@ write to the database), you can build native Syndie executables.  On *nix/osx,
 which is just like syndie-$version.bin.zip, except bin/syndie is the native
 executable instead of a shell script launching java.  Work is ongoing for
 GCJ/MinGW support, but the Makefile.mingw should work with a viable MinGW
-install of GCJ 4.x</p>.
+install of GCJ 4.x</p>
 </div>
 </body>
 </html>
