@@ -76,7 +76,7 @@ Unreleased development source:<ul>
     file, which includes their monotone public keys, ready to be imported
     with <code>cat mtn-committers | monotone read</code>.  That file can be
     verified against the above GPG public key with
-    <code>gpg --verify mtn-committers</code>.</li>
+    <code>gpg --verify mtn-committers.sig</code>.</li>
 <li>Read the included INSTALL and related documentation</li>
 <li>Prerequisites:
     <a href="http://ant.apache.org/">ant 1.6.5</a>, plus
